--- a/MobApplication/MobApplication/MobApplication/View/Login.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/Login.xaml
@@ -36,12 +36,19 @@
         <Frame Padding="0" AbsoluteLayout.LayoutBounds=".47, .7, .8,.06" AbsoluteLayout.LayoutFlags="All">
             <Button Command="{Binding OnLogin}"  x:Name="login" Padding="0"  Text="Log In"  BackgroundColor="#19D6D2" TextColor="White">
                 <Button.Triggers>
-                    <DataTrigger TargetType="Button" Binding="{Binding Source={x:Reference email}, Path=Text.Length}" Value="0">
+                    <MultiTrigger TargetType="Button">
+                        <MultiTrigger.Conditions>
+                            <BindingCondition  Binding="{Binding Source={x:Reference email}, Path=Text.Length}" Value="0"/>
+                            <BindingCondition  Binding="{Binding Source={x:Reference password}, Path=Text.Length}" Value="0"/>
+                        </MultiTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="False"></Setter>
+                    </MultiTrigger>
+                    <!--<DataTrigger TargetType="Button" Binding="{Binding Source={x:Reference email}, Path=Text.Length}" Value="0">
                         <Setter Property="IsEnabled" Value="False"></Setter>
                     </DataTrigger>
                     <DataTrigger TargetType="Button" Binding="{Binding Source={x:Reference password}, Path=Text.Length}" Value="0">
                         <Setter Property="IsEnabled" Value="False"></Setter>
-                    </DataTrigger>
+                    </DataTrigger>-->
                 </Button.Triggers>
             </Button>
         </Frame>
