--- a/MobApplication/MobApplication/MobApplication/View/DetailPage.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/DetailPage.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:ic="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:Effect="clr-namespace:MobApplication.Effect"
              mc:Ignorable="d"
              x:Class="MobApplication.View.DetailPage">
     <NavigationPage.TitleView>
@@ -41,7 +42,12 @@
         <ScrollView>
         <StackLayout Padding="50" BackgroundColor="White">
                 <StackLayout Orientation="Vertical" HorizontalOptions="Center" BackgroundColor="White">
-                    <ic:CircleImage WidthRequest="80" HeightRequest="80" Aspect="AspectFill" Source="pp.png" />
+                    <!--<ic:CircleImage WidthRequest="80" HeightRequest="80" Aspect="AspectFill" Source="pp.png" />-->
+                    <Image WidthRequest="80" HeightRequest="80" Aspect="AspectFill" Source="pp.png" >
+                        <Image.Effects>
+                            <Effect:RoundEffect />
+                        </Image.Effects>
+                    </Image>
                     <Label x:Name="LblNotStarted"  Padding="0" AbsoluteLayout.LayoutBounds="60,55,1,1" AbsoluteLayout.LayoutFlags="SizeProportional">
                         <Label.FormattedText>
                             <FormattedString>
@@ -81,7 +87,12 @@
                     <Label Text="Location" Style="{StaticResource LabelHeading}"/>
                 </StackLayout>
                 <Label Text="{Binding Location}" Style="{StaticResource LabelValue}" />
-                <Button Text="Edit Notes" TextColor="White" VerticalOptions="Center" HorizontalOptions="Center" CornerRadius="25" WidthRequest="{OnPlatform UWP=330,Android=300}" Clicked="Button_Clicked" Style="{StaticResource buttonStyle}" BackgroundColor="#BC2729" Padding="10">                </Button>
+                <!--<Button Text="Edit Notes" TextColor="White" VerticalOptions="Center" HorizontalOptions="Center" CornerRadius="25" WidthRequest="{OnPlatform UWP=330,Android=300}" Clicked="Button_Clicked"  BackgroundColor="#BC2729" Padding="10">                </Button>-->
+            <Button Text="Edit Notes" TextColor="White" VerticalOptions="Center" HorizontalOptions="Center"  WidthRequest="{OnPlatform UWP=330,Android=300}" Clicked="Button_Clicked"  BackgroundColor="#BC2729" Padding="10">
+                    <Button.Effects>
+                        <Effect:RoundEffect />
+                    </Button.Effects>
+                </Button>
         </StackLayout>
             </ScrollView>
     </ContentPage.Content>
