--- a/WeatherApplication/WeatherApplication/WeatherApplication/View/HomePage.xaml
+++ b/WeatherApplication/WeatherApplication/WeatherApplication/View/HomePage.xaml
@@ -2,14 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:WeatherApplication.Control"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:WeatherApplication.Control" xmlns:CustomView="clr-namespace:WeatherApplication.TryView"
              mc:Ignorable="d"
              NavigationPage.HasNavigationBar="False"
              x:Class="WeatherApplication.View.HomePage">
     <ContentPage.Resources>
         <ResourceDictionary>
-            <local:DatetimeToStringConverter x:Key="cnvDateTimeConverter"></local:DatetimeToStringConverter>
-            <local:DateToDayConverter x:Key="cnvDayConverterConverter"></local:DateToDayConverter>
+            <!--<local:DatetimeToStringConverter x:Key="cnvDateTimeConverter"></local:DatetimeToStringConverter>
+            <local:DateToDayConverter x:Key="cnvDayConverterConverter"></local:DateToDayConverter>-->
 
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -20,8 +20,9 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
-            <Image x:Name="bgImg" Aspect="AspectFill" Grid.RowSpan="3" Source="fabbg.jpg" Opacity="6" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
 
+            <Image x:Name="bgImg" Aspect="AspectFill" Grid.RowSpan="3" Source="fabbg.jpg" Opacity="6" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+            <CustomView:CustomTowMediaLoader x:Name="Loader" Grid.RowSpan="2" VerticalOptions="Center" HorizontalOptions="Center"></CustomView:CustomTowMediaLoader>
             <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand"  HorizontalOptions="FillAndExpand" Margin="0,50,0,50" Padding="0" Spacing="0" Grid.Row="0">
                 <Label x:Name="Lbl_CurrentState" Text="" TextColor="White" FontSize="20"  HorizontalOptions="Center" />
                 <Label x:Name="Lbl_CurrentWeatherCondition" Text="" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
@@ -51,8 +52,8 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <StackLayout Grid.Column="0" HorizontalOptions="Center" Margin="17">
-                                    <Label Text=" {Binding dt_txt, Converter={StaticResource cnvDateTimeConverter}}"  TextColor="White" HorizontalOptions="Center"/>
-                                    <Image Source="{Binding weather.icon}" WidthRequest="25" HeightRequest="25" />
+                                    <Label Text=" {Binding dt_txt}"  TextColor="White" HorizontalOptions="Center"/>
+                                    <Image Source="{Binding weather[0].icon}}" WidthRequest="25" HeightRequest="25" />
                                     <Label Text="{Binding main.temp_max}"  TextColor="White" />
                                 </StackLayout>
                             </Grid>
@@ -66,8 +67,8 @@
                     <DataTemplate>
                         <ViewCell>
                             <Grid  Grid.Row="2" Padding="0" >
-                                <Label Grid.Column="0" Text="{Binding dt_txt, Converter={StaticResource cnvDayConverterConverter}}" HorizontalOptions="Start" TextColor="White"/>
-                                <Image Grid.Column="1" WidthRequest="25" HeightRequest="25" HorizontalOptions="Center" Source="{Binding  weather.icon}" />
+                                <Label Grid.Column="0" Text="{Binding dt_txt}" HorizontalOptions="Start" TextColor="White"/>
+                                <Image Grid.Column="1" WidthRequest="25" HeightRequest="25" HorizontalOptions="Center" Source="{Binding  weather[0].icon}" />
                                 <Label Grid.Column="2"  Text="{Binding main.temp_max}" HorizontalOptions="Center" TextColor="White" />
                                 <Label  Grid.Column="2" Text="{Binding main.temp_min}" HorizontalOptions="End" TextColor="White"/>
                             </Grid>
