--- a/WeatherApplication/WeatherApplication/WeatherApplication/TryView/CustomGoogleActivityLoader.xaml
+++ b/WeatherApplication/WeatherApplication/WeatherApplication/TryView/CustomGoogleActivityLoader.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="WeatherApplication.TryView.CustomGoogleActivityLoader">
-    <ContentPage.Content>
+    <ContentView.Content>
         <StackLayout Orientation="Horizontal" HorizontalOptions="Center" HeightRequest="55" VerticalOptions="Center" Spacing="15">
             <StackLayout x:Name="Circle_Blue" HorizontalOptions="CenterAndExpand" VerticalOptions="EndAndExpand">
                 <Button CornerRadius="25" WidthRequest="25" HeightRequest="25" BackgroundColor="#4285F4"></Button>
@@ -20,5 +20,5 @@
                 <Button  CornerRadius="25" WidthRequest="25" HeightRequest="25" BackgroundColor="#0F9D58"></Button>
             </StackLayout>
         </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+    </ContentView.Content>
+</ContentView>
